# MorphoDynamics

./: .buildinfo  Analysis.py  ArtifactGeneration.py  ArtifactGenerator.py  Correlation.py  DataAccess.py  Dataset.py  DeformationModel.py  DisplacementEstimation.py  FigureHelper.py  FunctionalDefinition.py  InterfaceFigures.ipynb  LICENSE  Main.py  MainAnalysis.py  Metadata.py  Morpho_segmentation.ipynb  Readme.html  Readme.md  Segmentation.py  Settings.py  SignalExtraction.py  SyntheticData.py  UserInterface.ipynb  Windowing.py  _config.yml  _toc.yml  environment.yml  genindex.html  index.html  morpho_plots.py  morpho_segmentation.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: book.yml  debug.yml  python-package-conda.yml  test_and_deploy.yml  tox.ini
_sources/: Readme.md
_sources/mydocs/: Analysis_with_morpho_segmentation.ipynb  Analysis_without_UI.ipynb  Data_analysis.ipynb  Introduction.ipynb  Output_structure.ipynb  Postprocessing.ipynb  code_structure.ipynb  generate_HTML_UI.ipynb  usage_step_by_step.ipynb
_sources/notebooks/: InterfaceFiguresTabs.ipynb  Morpho_segmentation.ipynb  (+1 more)
examples/: main.py
morphodynamics/: Analysis.py  Analysis_par.py  ArtifactGeneration.py  Correlation.py  DataAccess.py  Dataset.py  DisplacementEstimation.py  FigureHelper.py  Main.py  Parameters.py  Segmentation.py  Settings.py  SyntheticData.py  Timer.py  Windowing.py  __init__.py  analysis.py  analysis_par.py  artifactgeneration.py  correlation.py  dataaccess.py  dataset.py  displacementestimation.py  figurehelper.py  folders.py  functionaldefinition.py  gitversion.py  main.py  morpho_plots.py  morpho_segmentation.py  parameters.py  results.py  segmentation.py  settings.py  spline_to_image.py  splineutils.py  syntheticdata.py  timer.py  utils.py  version.py  (+2 more)
morphodynamics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mydocs/: Analysis_with_morpho_segmentation.html  Analysis_with_morpho_segmentation.ipynb  Analysis_without_UI.html  Analysis_without_UI.ipynb  Data.html  Data.ipynb  Data_analysis.html  Data_analysis.ipynb  Installation.html  Installation.ipynb  Introduction.html  Introduction.ipynb  Napari_Plugin.html  Napari_Plugin.ipynb  Output_structure.html  Output_structure.ipynb  Postprocessing.html  Run_analysis.html  code_structure.html  code_structure.ipynb  generate_HTML_UI.html  generate_HTML_UI.ipynb  segmentation.html  segmentation.ipynb  usage_step_by_step.html  usage_step_by_step.ipynb
notebooks/: InterfaceFigures.html  InterfaceFigures.ipynb  InterfaceFiguresTabs.html  InterfaceFiguresTabs.ipynb  Morpho_segmentation.html  Morpho_segmentation.ipynb  Postprocessing.ipynb  stitching_h5.html  stitching_h5.ipynb
synthetic/: simulate_data.html  simulate_data.ipynb  synthetic_testUI.html  synthetic_testUI.ipynb  synthetic_test_cellpose.html  synthetic_test_cellpose.ipynb  synthetic_test_ilastik.html  synthetic_test_ilastik.ipynb  synthetic_test_postprocessing.html  synthetic_test_postprocessing.ipynb
tests/: create_dataset.py  test_utils.py
(+82 files in other folders)
