[metadata]
name = morphodynamics
author = Guillaume Witz and Cedric Vonesch
author_email = guillaume.witz@unibe.ch
description = Cell segmentation and windowing
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/guiwitz/morphodynamics
license = BSD 3-Clause

[options]
packages = find:
python_requires = >=3.8,<3.10
install_requires =
    numpy
    pandas
    matplotlib
    scikit-image
    tifffile
    aicsimageio
    dask[complete]
    dask-jobqueue
    microfilm
    dill
    nd2reader@git+https://github.com/guiwitz/nd2reader.git@master#egg=nd2reader
    napari_morphodynamics@git+https://github.com/guiwitz/napari-morphodynamics.git
    napari[all]