[metadata]
name = morphodynamics
author = Guillaume Witz and Cedric Vonesch
author_email = guillaume.witz@unibe.ch
description = Cell segmentation and windowing
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/guiwitz/morphodynamics
license = BSD 3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.8,<3.10
setup_requires = setuptools_scm
install_requires =
    napari_convpaint@git+https://github.com/guiwitz/napari-convpaint.git
    numpy
    pandas
    matplotlib
    scikit-image
    tifffile
    aicsimageio
    dask[complete]
    dask-jobqueue
    microfilm
    dill
    joblib
    tqdm
    nd2reader

[options.extras_require]
napari =
    napari[all]
book =
    jupyter-book
    sphinx
