[metadata]
name = morphodynamics
author = Guillaume Witz and Cedric Vonesch
author_email = guillaume.witz@unibe.ch
description = Cell segmentation and windowing
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/guiwitz/morphodynamics
license = BSD 3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.9,<3.11
setup_requires = setuptools_scm
install_requires =
    aicsimageio
    dask[complete]
    dask-jobqueue
    napari_convpaint
    numpy
    pandas
    matplotlib
    scikit-image
    tifffile
    microfilm
    dill
    joblib
    tqdm
    ipywidgets
    cmap

[options.extras_require]
napari =
    napari[all]
cellpose =
    cellpose
nd2 =
    nd2reader
book =
    jupyter-book
    sphinx
